changing app logo

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMaster</title>
     <meta name="description" content="Maximiza tu productividad con TaskMaster, la app intuitiva para gestionar tus tareas diarias. Crea, organiza y completa tareas con facilidad, establece recordatorios y sincroniza en todos tus dispositivos. ¡Simplifica tu vida y mantén todo bajo control con TaskMaster! ">
     <meta name="keywords" content="gestión de tareas, app de tareas, organizador de tareas, lista de tareas, app de productividad, recordatorios de tareas, administración del tiempo, planificador de tareas, app para organizar, herramienta de productividad, gestor de proyectos personales, sincronización de tareas, app de listas, recordatorios inteligentes, tareas diarias">
-
   </head>
   <body>
     <div id="root"></div>
