adding pwa feature

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#fef08a" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMaster</title>
     <meta name="description" content="Maximiza tu productividad con TaskMaster, la app intuitiva para gestionar tus tareas diarias. Crea, organiza y completa tareas con facilidad, establece recordatorios y sincroniza en todos tus dispositivos. ¡Simplifica tu vida y mantén todo bajo control con TaskMaster! ">
