--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>You need JavaScript to run this app :C</noscript>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
